# mcp-weather

./: Cargo.toml  README.md  mcp-server.toml
src/: lib.rs  main.rs  server.rs
